--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = avuxdpj8izsqqrrj
-app42.paas.db.port = 40477
-app42.paas.db.password = eclrsu49fk7lzwulidl8ae3ig18sd4w0
+app42.paas.db.username = a7zr99boe69ubfjg
+app42.paas.db.port = 13001
+app42.paas.db.password = dkdsr4cbshjihtmenn4e0mx560xi9w3e
 app42.paas.db.ip = 10.0.2.12
 app42.paas.db.name = t
