--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = a7zr99boe69ubfjg
-app42.paas.db.port = 13001
-app42.paas.db.password = dkdsr4cbshjihtmenn4e0mx560xi9w3e
-app42.paas.db.ip = 10.0.2.12
+app42.paas.db.username = an3xfc45arh3n82l
+app42.paas.db.port = 12470
+app42.paas.db.password = k6g5hubf2d5eq3vejaz7lksdk4982etm
+app42.paas.db.ip = 172.16.2.167
 app42.paas.db.name = t
